@@ -41,7 +41,7 @@
 	      <property name="use_underline">True</property>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image2502">
+		<widget class="GtkImage" id="image2604">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-cdrom</property>
 		  <property name="icon_size">1</property>
@@ -64,7 +64,7 @@
 		      <accelerator key="R" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2503">
+			<widget class="GtkImage" id="image2605">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-refresh</property>
 			  <property name="icon_size">1</property>
@@ -86,7 +86,7 @@
 		      <accelerator key="N" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2504">
+			<widget class="GtkImage" id="image2606">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-about</property>
 			  <property name="icon_size">1</property>
@@ -113,7 +113,7 @@
 		      <signal name="activate" handler="on_itemAddChannel_activate" last_modification_time="Sat, 29 Oct 2005 11:33:59 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2505">
+			<widget class="GtkImage" id="image2607">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-add</property>
 			  <property name="icon_size">1</property>
@@ -134,7 +134,7 @@
 		      <signal name="activate" handler="on_itemEditChannel_activate" last_modification_time="Sat, 29 Oct 2005 11:34:38 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2506">
+			<widget class="GtkImage" id="image2608">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-edit</property>
 			  <property name="icon_size">1</property>
@@ -155,7 +155,7 @@
 		      <signal name="activate" handler="on_itemRemoveChannel_activate" last_modification_time="Sat, 29 Oct 2005 11:35:16 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2507">
+			<widget class="GtkImage" id="image2609">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-remove</property>
 			  <property name="icon_size">1</property>
@@ -182,7 +182,7 @@
 		      <signal name="activate" handler="on_itemImportChannels_activate" last_modification_time="Tue, 13 Jun 2006 19:39:42 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2508">
+			<widget class="GtkImage" id="image2610">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-redo</property>
 			  <property name="icon_size">1</property>
@@ -208,7 +208,7 @@
 		      <property name="use_underline">True</property>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2509">
+			<widget class="GtkImage" id="image2611">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-connect</property>
 			  <property name="icon_size">1</property>
@@ -231,7 +231,7 @@
 			      <accelerator key="S" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image2510">
+				<widget class="GtkImage" id="image2612">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-refresh</property>
 				  <property name="icon_size">1</property>
@@ -252,7 +252,7 @@
 			      <signal name="activate" handler="on_cleanup_ipod_activate" last_modification_time="Wed, 05 Apr 2006 22:14:51 GMT"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image2511">
+				<widget class="GtkImage" id="image2613">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-delete</property>
 				  <property name="icon_size">1</property>
@@ -276,7 +276,7 @@
 		      <property name="use_underline">True</property>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2512">
+			<widget class="GtkImage" id="image2614">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-justify-left</property>
 			  <property name="icon_size">1</property>
@@ -298,7 +298,7 @@
 			      <signal name="activate" handler="on_itemExportChannels_activate" last_modification_time="Sat, 29 Oct 2005 11:37:45 GMT"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image2513">
+				<widget class="GtkImage" id="image2615">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-save-as</property>
 				  <property name="icon_size">1</property>
@@ -330,7 +330,7 @@
 		      <accelerator key="P" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2514">
+			<widget class="GtkImage" id="image2616">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-preferences</property>
 			  <property name="icon_size">1</property>
@@ -358,7 +358,7 @@
 		      <accelerator key="Q" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2515">
+			<widget class="GtkImage" id="image2617">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-quit</property>
 			  <property name="icon_size">1</property>
@@ -382,7 +382,7 @@
 	      <property name="use_underline">True</property>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image2516">
+		<widget class="GtkImage" id="image2618">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-justify-left</property>
 		  <property name="icon_size">1</property>
@@ -405,7 +405,7 @@
 		      <accelerator key="N" modifiers="GDK_CONTROL_MASK | GDK_MOD1_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2517">
+			<widget class="GtkImage" id="image2619">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-about</property>
 			  <property name="icon_size">1</property>
@@ -426,7 +426,7 @@
 		      <signal name="activate" handler="on_btnSelectAllAvailable_clicked" last_modification_time="Fri, 08 Dec 2006 23:50:54 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2518">
+			<widget class="GtkImage" id="image2620">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-sort-ascending</property>
 			  <property name="icon_size">1</property>
@@ -447,7 +447,7 @@
 		      <signal name="activate" handler="on_btnDownload_clicked" last_modification_time="Fri, 08 Dec 2006 23:50:54 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2519">
+			<widget class="GtkImage" id="image2621">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-goto-bottom</property>
 			  <property name="icon_size">1</property>
@@ -475,7 +475,7 @@
 		      <accelerator key="Delete" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2520">
+			<widget class="GtkImage" id="image2622">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-clear</property>
 			  <property name="icon_size">1</property>
@@ -497,7 +497,7 @@
 		      <accelerator key="Delete" modifiers="0" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2521">
+			<widget class="GtkImage" id="image2623">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-delete</property>
 			  <property name="icon_size">1</property>
@@ -525,7 +525,7 @@
 		      <accelerator key="Return" modifiers="GDK_SHIFT_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2522">
+			<widget class="GtkImage" id="image2624">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-media-play</property>
 			  <property name="icon_size">1</property>
@@ -545,6 +545,30 @@
 		  </child>
 
 		  <child>
+		    <widget class="GtkMenuItem" id="item_toggle_downloaded">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Toggle downloaded status for selection</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_item_toggle_downloaded_activate" last_modification_time="Thu, 30 Aug 2007 15:20:35 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkMenuItem" id="item_toggle_played">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Toggle played status for selection</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_item_toggle_played_activate" last_modification_time="Thu, 30 Aug 2007 15:20:35 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkSeparatorMenuItem" id="separator11">
+		      <property name="visible">True</property>
+		    </widget>
+		  </child>
+
+		  <child>
 		    <widget class="GtkImageMenuItem" id="itemTransferSelected">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Transfer selected episodes</property>
@@ -552,7 +576,7 @@
 		      <signal name="activate" handler="on_btnTransfer_clicked" last_modification_time="Sat, 17 Mar 2007 12:59:55 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2523">
+			<widget class="GtkImage" id="image2625">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-network</property>
 			  <property name="icon_size">1</property>
@@ -576,7 +600,7 @@
 	      <property name="use_underline">True</property>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image2524">
+		<widget class="GtkImage" id="image2626">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-help</property>
 		  <property name="icon_size">1</property>
@@ -598,7 +622,7 @@
 		      <signal name="activate" handler="on_homepage_activate" last_modification_time="Mon, 04 Dec 2006 12:08:55 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2525">
+			<widget class="GtkImage" id="image2627">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-home</property>
 			  <property name="icon_size">1</property>
@@ -625,7 +649,7 @@
 		      <signal name="activate" handler="on_wishlist_activate" last_modification_time="Mon, 04 Dec 2006 12:06:32 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2526">
+			<widget class="GtkImage" id="image2628">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-edit</property>
 			  <property name="icon_size">1</property>
@@ -646,7 +670,7 @@
 		      <signal name="activate" handler="on_mailinglist_activate" last_modification_time="Mon, 04 Dec 2006 12:12:24 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2527">
+			<widget class="GtkImage" id="image2629">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-find</property>
 			  <property name="icon_size">1</property>
